--- a/intro.css
+++ b/intro.css
@@ -1903,228 +1903,213 @@ body{
 
 
 /* ----------Responsive----- */
- @media screen and (max-width:768px) {
-    .box-slider{
+@media screen and (max-width: 768px) {
+    .box-slider {
         overflow: hidden;
     }
-    .slider1 img{
+    .slider1 img {
         width: 100%;
         height: 100%;
     }
-    .box-slider-img2 .slider-img2{
+    .box-slider-img2 .slider-img2 {
         top: 100px;
         left: 10px;
         width: 100px;
     }
-    .box-slider-img2 .slider-img2::before{
+    .box-slider-img2 .slider-img2::before {
         width: 60px;
         height: 60px;
     }
-    .box-slider-img3 .slider-img3{
+    .box-slider-img3 .slider-img3 {
         width: 100px;
         top: 80px;
-        left: 0px;
+        left: 0;
         display: none;
     }
-    .box-slider-img3 .slider-img3::before{
+    .box-slider-img3 .slider-img3::before {
         width: 70px;
         height: 70px;
     }
-    .box-slider-img4 .slider-img4{
+    .box-slider-img4 .slider-img4 {
         width: 100px;
         top: 80px;
         right: 30px;
         display: none;
     }
-    .box-slider-img4 .slider-img4::before{
+    .box-slider-img4 .slider-img4::before {
         width: 60px;
         height: 60px;
     }
-    .box-slider-img5 .slider-img5{
+    .box-slider-img5 .slider-img5 {
         width: 100px;
         right: 10px;
     }
-    .box-slider-img5 .slider-img5::before{
+    .box-slider-img5 .slider-img5::before {
         width: 60px;
         height: 60px;
     }
-    .textHappynewyear{
+    .textHappynewyear {
         width: 280px;
     }
-    .textHappynewyear .box-span span{
+    .textHappynewyear .box-span span {
         width: 50px;
         height: 50px;
     }
-    .textHappynewyear .box-span:nth-child(1) span::after{
+    .textHappynewyear .box-span:nth-child(1) span::after,
+    .textHappynewyear .box-span:nth-child(2) span::after,
+    .textHappynewyear .box-span:nth-child(3) span::after,
+    .textHappynewyear .box-span:nth-child(4) span::after {
         font-size: 23px;
     }
-    .textHappynewyear .box-span:nth-child(2) span::after{
-        font-size: 23px;
-    }
-    .textHappynewyear .box-span:nth-child(3) span::after{
-        font-size: 23px;
-    }
-    .textHappynewyear .box-span:nth-child(4) span::after{
-        font-size: 23px;
-    }
-    .slider1 .box-slider_img1 .slider-img1{
+    .slider1 .box-slider_img1 .slider-img1 {
         width: 280px;
         z-index: 100000;
     }
-    .slider1 .slider-img1 img{
+    .slider1 .slider-img1 img {
         width: 100%;
     }
-    .slider1 .box-slider_img1 .slider-img1::before{
-        width: calc(100% -50px);
+    .slider1 .box-slider_img1 .slider-img1::before {
+        width: calc(100% - 50px);
     }
-    .circle span{
+    .circle span {
         width: 300px;
         height: 300px;
     }
-    .cat img{
+    .cat img {
         width: 130px;
         margin-top: -30px;
     }
-    .box-lion_dance .lion_dance1{
+    .box-lion_dance .lion_dance1 {
         width: 170px;
         top: 400px;
         right: 20px;
         z-index: 100000;
     }
-    .box-lion_dance .lion_dance1::before{
+    .box-lion_dance .lion_dance1::before {
         width: 100px;
         bottom: 40px;
     }
-    .box-lion_dance .lion_dance2{
+    .box-lion_dance .lion_dance2 {
         width: 180px;
         top: 415px;
         left: 20px;
         z-index: 100000;
     }
-    .box-lion_dance .lion_dance2::before{
+    .box-lion_dance .lion_dance2::before {
         width: 80px;
         bottom: 25px;
     }
-    .box-flower{
+    .box-flower {
         display: none;
     }
-    .number2023{
+    .number2023 {
         top: 60%;
         font-size: 65px;
     }
-    .box-button{
+    .box-button {
         top: 80%;
     }
-    .slider2 .rhombus:nth-child(1){
+    .slider2 .rhombus:nth-child(1) {
         width: 306px;
         height: 280px;
     }
-    .slider2 .rhombus:nth-child(2){
+    .slider2 .rhombus:nth-child(2) {
         width: 230px;
         height: 204px;
     }
-    .rhombus-img{
+    .rhombus-img {
         width: 170px;
         height: 170px;
     }
-    .mail{
+    .mail {
         margin-top: 370px;
         z-index: 1000000000000000;
     }
-    .slider3 .box-content{
+    .slider3 .box-content {
         width: 100%;
     }
-.box-circle_left .circle_left{
-    width: 200px;
+    .box-circle_left .circle_left {
+        width: 200px;
+    }
+    .box-circle_left .circle_left::before {
+        width: 180px;
+        height: 180px;
+    }
+    .text-content h2 {
+        font-size: 15px;
+    }
+    .text-content h1 {
+        font-size: 19px;
+    }
+    .text-content span {
+        font-size: 25px;
+    }
+    .box-big_flowers img:nth-child(1) {
+        width: 30px;
+        top: 30px;
+        right: 30px;
+    }
+    .box-big_flowers img:nth-child(2) {
+        width: 30px;
+        left: 0px;
+    }
+    .box-big_flowers img:nth-child(3) {
+        width: 40px;
+        left: 70px;
+    }
+    .box-big_flowers img:nth-child(4) {
+        width: 70px;
+    }
+    .box-big_flowers img:nth-child(6) {
+        width: 70px;
+        left: 20px;
+    }
+    .box-big_flowers img:nth-child(7) {
+        width: 30px;
+        right: 60px;
+    }
+    .apricot_blossom img:nth-child(1) {
+        width: 20px;
+        left: 100px;
+    }
+    .slider3 .right .content .title {
+        height: 25px;
+    }
+    .slider3 .right .content h1 {
+        font-size: 20px;
+    }
+    .box-content .right .content p {
+        font-size: 15px;
+    }
+    .box-content .right .content .fixedContent {
+        width: 200px;
+        margin-left: 50px;
+    }
+    .box-content .right .content .fixedContent h3 {
+        font-size: 15px;
+    }
 }
-.box-circle_left .circle_left::before{
-    width: 180px;
-    height: 180px;
-}
-.text-content h2{
-    font-size: 15px;
-}
-.text-content h1{
-    font-size: 19px;
-}
-.text-content span{
-    font-size: 25px;
-}
-.box-big_flowers img:nth-child(1){
-    width: 30px;
-    top: 30px;
-    right: 30px;
-}
-.box-big_flowers img:nth-child(2){
-    width: 30px;
-    left: 0px;
-}
-.box-big_flowers img:nth-child(3){
-    width: 40px;
-    left: 70px;
-}
-.box-big_flowers img:nth-child(4){
-    width: 70px;
-}
-.box-big_flowers img:nth-child(6){
-    width: 70px;
-    left: 20px;
-}
-.box-big_flowers img:nth-child(7){
-    width: 30px;
-    right: 60px;
-}
-.apricot_blossom img:nth-child(1){
-    width: 20px;
-    left: 100px;
-}
-.slider3 .right .content .title{
-    height: 25px;
-}
-.slider3 .right .content h1{
-    font-size: 20px;
-}
-.box-content .right .content p{
-    font-size: 15px;
-}
-.box-content .right .content .fixedContent{
-    width: 200px;
-    margin-left: 50px;
-}
-.box-content .right .content .fixedContent h3{
-   font-size: 15px;
-}
- }
 
-
- @media screen and (max-width: 390px){
-    .box-lion_dance .lion_dance1{
+@media screen and (max-width: 390px) {
+    .box-lion_dance .lion_dance1 {
         top: 550px;
-        z-index: 100000;
         right: 0;
     }
-    .box-lion_dance .lion_dance2{
+    .box-lion_dance .lion_dance2 {
         top: 565px;
-        z-index: 100000;
         left: 0;
     }
-    .box-button{
+    .box-button {
         top: 90%;
     }
-    .number2023{
+    .number2023 {
         font-size: 50px;
         top: 58%;
     }
-    .number2023 .number:nth-child(1){
+    .number2023 .number:nth-child(1),
+    .number2023 .number:nth-child(2),
+    .number2023 .number:nth-child(3),
+    .number2023 .number:nth-child(4) {
         top: -600px;
     }
-    .number2023 .number:nth-child(2){
-        top: -600px;
-    }
-    .number2023 .number:nth-child(3){
-        top: -600px;
-    }
-    .number2023 .number:nth-child(4){
-        top: -600px;
-    }
- }
+}
