--- a/intro.css
+++ b/intro.css
@@ -1904,50 +1904,24 @@ body{
 
 /* ----------Responsive----- */
 @media screen and (max-width: 768px) {
+    /* Điều chỉnh độ rộng của box-slider */
     .box-slider {
         overflow: hidden;
     }
+    /* Đảm bảo hình ảnh trong slider1 sẽ có kích thước đầy đủ */
     .slider1 img {
         width: 100%;
-        height: 100%;
+        height: auto;
     }
-    .box-slider-img2 .slider-img2 {
-        top: 100px;
-        left: 10px;
-        width: 100px;
-    }
-    .box-slider-img2 .slider-img2::before {
-        width: 60px;
-        height: 60px;
-    }
-    .box-slider-img3 .slider-img3 {
-        width: 100px;
-        top: 80px;
-        left: 0;
-        display: none;
-    }
-    .box-slider-img3 .slider-img3::before {
-        width: 70px;
-        height: 70px;
-    }
-    .box-slider-img4 .slider-img4 {
-        width: 100px;
-        top: 80px;
-        right: 30px;
-        display: none;
-    }
-    .box-slider-img4 .slider-img4::before {
-        width: 60px;
-        height: 60px;
-    }
+    /* Điều chỉnh các phần tử trong box-slider-img2, box-slider-img3 */
+    .box-slider-img2 .slider-img2, 
+    .box-slider-img3 .slider-img3, 
+    .box-slider-img4 .slider-img4, 
     .box-slider-img5 .slider-img5 {
         width: 100px;
-        right: 10px;
+        display: block;
     }
-    .box-slider-img5 .slider-img5::before {
-        width: 60px;
-        height: 60px;
-    }
+    /* Điều chỉnh các phần tử text Happy New Year */
     .textHappynewyear {
         width: 280px;
     }
@@ -1955,64 +1929,47 @@ body{
         width: 50px;
         height: 50px;
     }
-    .textHappynewyear .box-span:nth-child(1) span::after,
-    .textHappynewyear .box-span:nth-child(2) span::after,
-    .textHappynewyear .box-span:nth-child(3) span::after,
-    .textHappynewyear .box-span:nth-child(4) span::after {
+    .textHappynewyear .box-span span::after {
         font-size: 23px;
     }
+    /* Điều chỉnh độ rộng của slider1 */
     .slider1 .box-slider_img1 .slider-img1 {
         width: 280px;
         z-index: 100000;
     }
-    .slider1 .slider-img1 img {
-        width: 100%;
-    }
-    .slider1 .box-slider_img1 .slider-img1::before {
-        width: calc(100% - 50px);
-    }
+    /* Điều chỉnh kích thước và vị trí của các phần tử */
     .circle span {
-        width: 300px;
-        height: 300px;
+        width: 250px;
+        height: 250px;
     }
     .cat img {
         width: 130px;
         margin-top: -30px;
     }
-    .box-lion_dance .lion_dance1 {
+    /* Điều chỉnh phần tử lion dance */
+    .box-lion_dance .lion_dance1,
+    .box-lion_dance .lion_dance2 {
         width: 170px;
+        position: absolute;
+    }
+    .box-lion_dance .lion_dance1 {
         top: 400px;
         right: 20px;
-        z-index: 100000;
-    }
-    .box-lion_dance .lion_dance1::before {
-        width: 100px;
-        bottom: 40px;
     }
     .box-lion_dance .lion_dance2 {
-        width: 180px;
         top: 415px;
         left: 20px;
-        z-index: 100000;
     }
-    .box-lion_dance .lion_dance2::before {
-        width: 80px;
-        bottom: 25px;
-    }
-    .box-flower {
-        display: none;
-    }
+    /* Điều chỉnh số 2023 */
     .number2023 {
-        top: 60%;
         font-size: 65px;
+        top: 60%;
     }
     .box-button {
         top: 80%;
     }
-    .slider2 .rhombus:nth-child(1) {
-        width: 306px;
-        height: 280px;
-    }
+    /* Điều chỉnh phần tử slider2 */
+    .slider2 .rhombus:nth-child(1),
     .slider2 .rhombus:nth-child(2) {
         width: 230px;
         height: 204px;
@@ -2021,19 +1978,9 @@ body{
         width: 170px;
         height: 170px;
     }
-    .mail {
-        margin-top: 370px;
-        z-index: 1000000000000000;
-    }
+    /* Điều chỉnh độ rộng của các phần tử trong slider3 */
     .slider3 .box-content {
         width: 100%;
-    }
-    .box-circle_left .circle_left {
-        width: 200px;
-    }
-    .box-circle_left .circle_left::before {
-        width: 180px;
-        height: 180px;
     }
     .text-content h2 {
         font-size: 15px;
@@ -2044,43 +1991,34 @@ body{
     .text-content span {
         font-size: 25px;
     }
-    .box-big_flowers img:nth-child(1) {
-        width: 30px;
-        top: 30px;
-        right: 30px;
-    }
-    .box-big_flowers img:nth-child(2) {
-        width: 30px;
-        left: 0px;
-    }
-    .box-big_flowers img:nth-child(3) {
-        width: 40px;
-        left: 70px;
-    }
-    .box-big_flowers img:nth-child(4) {
-        width: 70px;
-    }
-    .box-big_flowers img:nth-child(6) {
-        width: 70px;
-        left: 20px;
-    }
+    /* Điều chỉnh các hình ảnh lớn trong box-big_flowers */
+    .box-big_flowers img:nth-child(1),
+    .box-big_flowers img:nth-child(2),
+    .box-big_flowers img:nth-child(3),
+    .box-big_flowers img:nth-child(4),
+    .box-big_flowers img:nth-child(6),
     .box-big_flowers img:nth-child(7) {
         width: 30px;
-        right: 60px;
+        top: 30px;
     }
+    /* Điều chỉnh hình ảnh của hoa mai */
     .apricot_blossom img:nth-child(1) {
         width: 20px;
         left: 100px;
     }
+    /* Điều chỉnh phần tử title trong slider3 */
     .slider3 .right .content .title {
         height: 25px;
     }
     .slider3 .right .content h1 {
         font-size: 20px;
     }
+    /* Điều chỉnh các phần tử p */
     .box-content .right .content p {
         font-size: 15px;
+        text-align: center;
     }
+    /* Điều chỉnh phần tử fixedContent */
     .box-content .right .content .fixedContent {
         width: 200px;
         margin-left: 50px;
@@ -2091,6 +2029,7 @@ body{
 }
 
 @media screen and (max-width: 390px) {
+    /* Điều chỉnh phần tử lion_dance cho màn hình nhỏ hơn */
     .box-lion_dance .lion_dance1 {
         top: 550px;
         right: 0;
@@ -2099,6 +2038,7 @@ body{
         top: 565px;
         left: 0;
     }
+    /* Điều chỉnh phần tử button */
     .box-button {
         top: 90%;
     }
@@ -2113,3 +2053,4 @@ body{
         top: -600px;
     }
 }
+
